--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "v-money": "^0.8.1",
     "vue": "^2.6.11",
+    "vue-router": "^3.5.1",
     "vuelidate": "^0.7.6"
   },
   "devDependencies": {
